fix: adjust line height for lesson content to improve readability

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -167,7 +167,6 @@ div[role="dialog"] {
 }
 // content
 .lesson-content {
-  line-height: 1.75;
   @apply text-sm lg:text-base;
   p,
   ul,
